--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
   },
   "require": {
     "php": "^8.0",
+    "ext-yaml": "*",
     "bayfrontmedia/php-array-helpers": "^2.0",
-    "bayfrontmedia/php-validator": "^3.0"
+    "bayfrontmedia/php-validator": "^4.0"
   },
   "autoload": {
     "psr-4": {
